--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Player</title>
+    <title>로딩중...</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         html, body {
@@ -40,7 +40,7 @@
         </div>
     </div>
 
-    <video id="video-player" src="https://freegive.kro.kr/a.mp4" controls loop></video>
+    <video id="video-player" src="http://freegive.kro.kr/a.mp4" controls loop></video>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
